kubernetes_deploy/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: laa-fee-calculator
spec:
  template:
    metadata:
      labels:
        app: laa-fee-calculator-app
    spec:
      containers:
      - image: 926803513772.dkr.ecr.eu-west-1.amazonaws.com/claim-for-crown-court-defence/laa-fee-calculator:latest
        name: app
        ports:
        - containerPort: 8080
          name: http
