kubernetes_deploy/laa-fee-calc-dev-app_deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: "laa-fee-dev-app"
  namespace: laa-fee-calculator-dev
spec:
  template:
    metadata:
      labels:
        app: "laa-fee-dev-app"
    spec:
      containers:
      - image: 926803513772.dkr.ecr.eu-west-1.amazonaws.com/laa-fee-calculator:latest
        name: "laa-fee-dev-app"
        ports:
        - containerPort: 8080
          name: "laa-fee-dev-app"
