kubernetes_deploy/laa-fee-calc-dev-db_deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
 name: laa-fee-dev-db
spec:
 template:
   metadata:
     labels:
       app: laa-fee-dev-db
   spec:
    containers:
    - image: postgres
      name: laa-fee-dev-db
      ports:
      - containerPort: 5432
        name: laa-fee-dev-db
