kubernetes_deploy/laa-fee-calc-dev-app_service.yaml
apiVersion: v1
kind: Service
metadata:
 name: laa-fee-dev-app
 namespace: laa-fee-calculator-dev
spec:
 ports:
 - port: 8000
   name: http
   targetPort: 8080
 selector:
   app: laa-fee-dev-app
