kubernetes_deploy/laa-fee-calc-dev-db_service.yaml
apiVersion: v1
kind: Service
metadata:
 name: laa-fee-dev-db
spec:
 ports:
 - port: 5432
 selector:
   app: laa-fee-dev-db
