kubernetes_deploy/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: laa-fee-calculator
  namespace: laa-fee-calculator-staging
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: laa-fee-calculator-staging.apps.cloud-platform-live-0.k8s.integration.dsd.io
    http:
      paths:
      - path: /
        backend:
          serviceName: laa-fee-calculator
          servicePort: 8080
