kubernetes_deploy/laa-fee-calc-dev_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "laa-fee-dev"
  namespace: laa-fee-calculator-dev
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: laa-fee-calculator-dev.apps.non-production.k8s.integration.dsd.io
    http:
      paths:
      - path: /
        backend:
          serviceName: laa-fee-dev-app
          servicePort: 8000
      - path: /
        backend:
          serviceName: laa-fee-dev-db
          servicePort: 5432
